feat: create component SkeletonLoading and hooks usePosts and useComments

--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server api.json -p 5000 -d 1500"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "json-server": "^0.17.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
+    "react-loading-skeleton": "^3.1.0",
     "sass": "^1.53.0"
   },
   "devDependencies": {
