--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "date-fns": "^2.29.1",
     "json-server": "^0.17.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
@@ -20,6 +21,7 @@
     "sass": "^1.53.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
